Moved the SourceVoxel filepath into the model for simplicity. Added range validation into model import. Added experimental gap-less switch into model import, using auotmatic checks if nothing was detected during the voxel import. Updated release version.

--- a/Main/SEToolbox/SEToolbox/App.xaml
+++ b/Main/SEToolbox/SEToolbox/App.xaml
@@ -111,5 +111,13 @@
             </Setter>
         </Style>
 
+        <Style x:Key="textBoxInError" TargetType="{x:Type TextBox}">
+            <Style.Triggers>
+                <Trigger Property="Validation.HasError" Value="true">
+                    <Setter Property="ToolTip" Value="{Binding RelativeSource={x:Static RelativeSource.Self}, Path=(Validation.Errors)[0].ErrorContent}"/>
+                </Trigger>
+            </Style.Triggers>
+        </Style>
+
     </Application.Resources>
 </Application>
